<resources>
    <string name="app_name">Волонтёры</string>
    <string name="menu_events">События</string>
    <string name="menu_museums">Музеи</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_events_current">Ближайшие</string>
    <string name="nearest_events_text">Ближайшие события:</string>
    <string name="name_request">Имя:</string>
    <string name="surname_request">Фамилия:</string>
    <string name="patronymic">Отчество:</string>
    <string name="request_birth_date">Дата рождения</string>
    <string name="edit_name">Имя</string>
    <string name="edit_surname">Фамилия</string>
    <string name="edit_patronymic">Отчество</string>
    <string name="edit_birth_date">Дата рождения (dd.mm.yyyy)</string>
    <string name="request_email">E-mail:</string>
    <string name="edit_email">E-mail</string>
    <string name="request_phone">Номер телефона:</string>
    <string name="edit_phone">Телефон</string>
    <string name="request_vk">Ссылка на аккаунт ВКонтакте:</string>
    <string name="edit_vk">Ссылка на аккаунт ВКонтакте</string>
    <string name="request_working_place">Место учебы/работы:</string>
    <string name="edit_working_place">Укажите место работы/учебы</string>
    <string name="request_diploma">Специальность по диплому:</string>
    <string name="edit_diploma">Укажите специальность по диплому</string>
    <string name="request_languages">Владение иностранными языками:</string>
    <string name="request_experience">Есть ли у вас опыт волонтерства?</string>
    <string name="answer_experience">Да</string>
    <string name="request_extra_skills">Опишите свои навыки и умения:</string>
    <string name="edit_extra_skills">Укажите навыки и умения</string>
    <string name="request_clothes_size">Укажите размер одежды:</string>
    <string name="edit_clothes_size">Размер одежды</string>
    <string name="event_detail_sign_up">Записаться</string>
    <string name="event_participant_list_title">Участники</string>
    <string name="event_participant_friends_title">Друзья</string>
    <string name="city">Город:</string>
    <string name="location">Локация:</string>
    <string name="date">Дата:</string>
    <string name="description">Описание:</string>
    <string name="authorization_title">Войти в приложение</string>
    <string name="edit_login">Введите логин</string>
    <string name="edit_password">Введите пароль</string>
    <string name="authorization_social_networks_suggest">Авторизоваться через\n социальные сети:</string>
    <string name="person_authorization_enter">Войти</string>
    <string name="profile_favourite_museums">Избранные музеи</string>
    <string name="edit_languages">Укажите степени владения иностранными языками</string>
    <string name="person_auth_register">Регистрация</string>
    <string name="ok">OK</string>
    <string name="create_password">Пароль</string>
    <string name="create_login">Логин</string>
    <string name="add_to_favorites">Add to favorites</string>

    <plurals name="numberOfMembers">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="other">%d участников</item>
    </plurals>

    <plurals name="numberOfFriends">
        <item quantity="one">%d друг</item>
        <item quantity="few">%d друга</item>
        <item quantity="other">%d друзей</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_registration_request_start_date">Дата начала</string>
    <string name="event_registration_end_date">Дата конца</string>
    <string name="event_registration_request_role">Желаемая роль</string>
    <string name="edit_comment">Введите комментарий</string>
    <string name="event_registration_submit">Подтвердить</string>
    <string name="profile_request_satellite">Введите код\n карты \'Спутник\'</string>
</resources>
