<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/person_registration_edit_name"
            style="@style/AppTheme.OptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/person_registration_edit_surname"
            style="@style/AppTheme.OptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_surname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_registration_edit_name" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/person_registration_edit_patronymic"
            style="@style/AppTheme.OptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_patronymic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_registration_edit_surname" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/person_registration_edit_birth_date"
            style="@style/AppTheme.OptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_birth_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_registration_edit_patronymic" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/person_registration_edit_email"
            style="@style/AppTheme.OptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_registration_edit_birth_date" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/person_registration_edit_phone"
            style="@style/AppTheme.OptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_registration_edit_email" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/person_registration_edit_vk"
            style="@style/AppTheme.OptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_vk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_registration_edit_phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>