<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/person_registration_request_volunteer_experience"
            style="@style/AppTheme.Text.RequestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/request_experience" />

        <CheckBox
            android:id="@+id/person_registration_edit_volunteer_experience"
            style="@style/AppTheme.Text.RequestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_registration_request_volunteer_experience"
            android:text="@string/answer_experience" />

        <TextView
            android:id="@+id/person_registration_request_child_experience"
            style="@style/AppTheme.Text.RequestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/person_registration_edit_volunteer_experience"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:text="@string/request_experience" />

        <CheckBox
            android:id="@+id/person_registration_edit_child_experience"
            style="@style/AppTheme.Text.RequestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_registration_request_child_experience"
            android:text="@string/answer_experience" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/person_registration_edit_extra_skills"
            style="@style/AppTheme.OptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_registration_edit_child_experience"
            android:hint="@string/edit_extra_skills" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/person_registration_edit_clothes_size"
            style="@style/AppTheme.OptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_registration_edit_extra_skills"
            android:layout_marginBottom="15dp"
            android:hint="@string/edit_clothes_size" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>