<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/person_registration_request_working_place"
            style="@style/RequestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/request_working_place" />

        <EditText
            android:id="@+id/person_registration_edit_working_place"
            style="@style/RequestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_registration_request_working_place"
            android:layout_marginBottom="15dp"
            android:hint="@string/edit_working_place" />

        <TextView
            android:id="@+id/person_registration_request_diploma"
            style="@style/RequestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/person_registration_edit_working_place"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/name_request" />

        <EditText
            android:id="@+id/person_registration_edit_diploma"
            style="@style/RequestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_registration_request_diploma"
            android:layout_marginBottom="15dp"
            android:hint="Введите имя" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>