<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp"
    tools:context=".EventRegistrationFragment">

    <TextView
        android:id="@+id/event_registration_request_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="28sp"
        android:text="@string/event_registration_request_start_date"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/event_registration_request_end_date"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/event_registration_edit_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/event_registration_request_start_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/event_registration_request_start_date"
        tools:src="@drawable/ic_vk"/>

    <TextView
        android:id="@+id/event_registration_request_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_registration_request_start_date"
        app:layout_constraintBottom_toTopOf="@id/event_registration_request_role"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="28sp"
        android:text="@string/event_registration_end_date" />

    <ImageView
        android:id="@+id/event_registration_edit_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/event_registration_request_end_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/event_registration_request_end_date"
        tools:src="@drawable/ic_vk"/>

    <TextView
        android:id="@+id/event_registration_request_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/event_registration_request_end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/event_registration_comment"
        app:layout_constraintHorizontal_bias="0"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="28sp"
        android:text="@string/event_registration_request_role" />

    <Spinner
        android:id="@+id/event_registration_edit_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/event_registration_request_role"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/event_registration_request_role" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/event_registration_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/event_registration_request_role"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/event_registration_submit"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="20sp"
        android:hint="@string/edit_comment" />

    <Button
        android:id="@+id/event_registration_submit"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/event_registration_submit"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>