<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="top">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/person_authorization_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/person_authorization_request_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="4dp"
            tools:visibility="visible"
            android:visibility="gone"
            android:text="Неправильно указаны логин или пароль"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="#F44336"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/person_authorization_request_login"
            style="@style/AppTheme.OptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_login"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/person_authorization_request_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_authorization_error"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/person_authorization_request_password"
            style="@style/AppTheme.OptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/person_authorization_enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_authorization_request_login" />

        <Button
            android:id="@+id/person_authorization_register_button"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:text="@string/person_auth_register"
            app:layout_constraintBottom_toBottomOf="@+id/person_authorization_enter"
            app:layout_constraintEnd_toStartOf="@+id/person_authorization_enter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/person_authorization_enter" />

        <Button
            android:id="@+id/person_authorization_enter"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/person_authorization_enter"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/person_authorization_register_button"
            app:layout_constraintTop_toBottomOf="@id/person_authorization_request_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
